--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
-.card {
-  display: flex;
+.container {
+  width: 900px;
+  margin: 0 auto;
+}
+.sectionTitle {
+  text-align: center;
+}
+.title {
+  margin-bottom: 0;
+}
+.subtitle {
+  margin: 0;
 }
