--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,21 @@ textarea {
   font-size: medium;
 }
 
+.btns {
+  background-color: orangered;
+  padding: 10px 20px;
+  border: none;
+  color: snow;
+  font-size: medium;
+  position: absolute;
+  top: 40px;
+}
+
+.dark {
+  background-color: black;
+  color: white;
+}
+
 .aside {
   padding: 20px;
 }
